@@ -45,8 +45,6 @@ dependencies {
     // https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc
     compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.28.0'
 
-    // jsoup HTML parser library @ https://jsoup.org/
-    compile 'org.jsoup:jsoup:1.13.1'
 }
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -62,20 +60,21 @@ jlink {
     options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
     launcher {
         name = 'whatwebfx'
-
-        jvmArgs = [
-                "--add-opens", "javafx.graphics/javafx.css=de.jensd.fx.fontawesomefx.commons"
-        ]
+        jvmArgs = [ '--add-exports','java.desktop/com.apple.eawt=ALL-UNNAMED',
+                    '--add-opens', 'javafx.graphics/javafx.css=de.jensd.fx.fontawesomefx.commons',]
     }
 
     jpackage {
-        if (org.gradle.internal.os.OperatingSystem.current().windows) {
-            installerOptions += ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-shortcut']
+        if (javafx.getPlatform().name() == "OSX") {
+            installerType = "dmg"
+            jpackageHome = "/Users/<user>/Downloads/jdk-13.jdk/Contents/Home"
+        } else if (javafx.getPlatform().name() == "WINDOWS") {
+            installerType = "exe"
+            jpackageHome = "C:\\Users\\Gorka\\.sdkman\\candidates\\java\\15.0.1.hs-adpt"
+            installerOptions = ['--win-menu', '--win-shortcut', '--win-dir-chooser']
         }
     }
 }
-
-
 run {
     inputs.property('moduleName', moduleName)
     doFirst {
